changed "rent" to "borrow"
